Added the test case for reading the file from disk